force-app/main/default/objects/FX_Account_Contract__c/FX_Account_Contract__c.object-meta.xml
<CustomObject>
    <description>Contains the Contract records associated to the account.</description>
    <label>Account Contract</label>
    <nameField>
        <displayFormat>AC-{000}</displayFormat>
        <label>FX Account Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>