force-app/main/default/objects/FX_Account_Contract__c/fields/FX_Account__c.field-meta.xml
<CustomField>
    <fullName>FX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Lookup field related to the Account Contract.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FX_Account_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>