force-app/main/default/objects/FX_Account_Contract__c/fields/FX_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FX_Contract_End_Date__c</fullName>
    <description>Defines the End Date of Contract.</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>