force-app/main/default/objects/FX_Account_Contract__c/fields/FX_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FX_Contract_Start_Date__c</fullName>
    <description>Defines the start date of Account contract.</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>